--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="./notice/notice.html">お知らせ</a>
+            <a class="nav-link" href="./notice/notice.html">お知らせ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">稼働状況</a>
