--- a/notice/notice-nav.html
+++ b/notice/notice-nav.html
@@ -32,7 +32,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">お知らせ</a>
+        <a class="nav-link active" href="./notice/notice.html">お知らせ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">稼働状況</a>
