--- a/notice/notice.html
+++ b/notice/notice.html
@@ -22,12 +22,22 @@
     </div>
     <div class="card m-3">
       <div class="card-header">
-        WARBot beta4.0リリース
+        WARBotリリース情報
       </div>
       <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">WARBot beta4.0をリリースしました。</h5>
+        <p class="card-text">今回のアップデートは、バグ修正の他に、コマンドの追加等を行いました。</p>
+        <a href="#" class="btn btn-primary">続きを読む</a>
+      </div>
+    </div>
+    <div class="card m-3">
+      <div class="card-header">
+        運営からのお知らせ
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">お知らせを統合しました！</h5>
+        <p class="card-text">今まではScrapBoxなどの外部サイトを利用していましたが、今回より自サイトを利用します。</p>
+        <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
   </body>
