--- a/notice/notice-nav.html
+++ b/notice/notice-nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">StarLight</a>
+  <a class="navbar-brand" href="../index.html/">StarLight</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,7 +32,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="./notice/notice.html">お知らせ</a>
+        <a class="nav-link active" href="#">お知らせ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">稼働状況</a>
