--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </ul>
       </div>
     </nav>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <div class="alert alert-warning alert-dismissible fade show m-3" role="alert">
       <strong>注意</strong>　このサイトはまだ未完成です。
       <button type="button" class="close" data-dismiss="alert" aria-label="閉じる">
         <span aria-hidden="true">&times;</span>
