--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <title>StarLight</title>
+    <style type="text/css">
+
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -61,5 +64,40 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">StarLight</h1>
+        <p class="lead">あなたの人生をちょっと幸せにしたい。そんな思いで運営しています。</p>
+      </div><!-- /.container -->
+    </div><!-- /.jumbotron -->
+    <div class="container my-5">
+    <h2>気が向いたら開発します。</h2>
+    <hr class="my-4">
+    <p>映像やらプログラムやら、やりたいことが多すぎるので、気が向いたら開発します。<br>更新情報や最新情報はお知らせで確認できます。</p>
+    <a class="btn btn-primary" href="./notice/notice.html" role="button">お知らせ</a>
+    </div>
+    <div class="container my-5">
+    <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
+    <a class="btn btn-primary" href="https://www.m86.work/" role="button">ブログ</a>
+    </div>
+    <div class="container my-5">
+    <h2>運営サービス一覧</h2>
+    <hr class="my-4">
+    <h3>ツイートレット - Tweetlet</h3>
+    <p>今見てるサイトをツイートできるNowBrowsing機能が欲しくて作りました。<br>NowBrowsingのところは変更可能です。</p>
+    <a class="btn btn-primary" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
+    </div>
+    <div class="container my-5">
+    <h2>個人運営のサイトです。</h2>
+    <hr class="my-4">
+    <p>自分がプログラム等を学ぶため、そして他人に喜んでもらうため、日々運営を行っています。<br>だからお金は取りません。でもお気持ちで寄付を受け付けています。</p>
+    <a class="btn btn-primary" href="#" role="button">寄付する</a>
+    </div>
+    <footer class="page-footer font-small blue">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright
+        <a href="https://twitter.com/minatoo86"> Minato86</a>
+      </div>
+    </footer>
   </body>
+
 </html>
