--- a/warbot/war-nav.html
+++ b/warbot/war-nav.html
@@ -12,7 +12,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
-          <a class="dropdown-item" href="../warbot/warbot.html">WARBot</a>
+          <a class="dropdown-item" href="#">WARBot</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
