--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="./warbot/warbot.html">WARBot</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
