--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -11,10 +11,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $(function(){
-        $("#nav-01").load("notice-nav.html");
+        $("#nav-01").load("war-nav.html");
       })
     </script>
-    <title>お知らせ - StarLight</title>
+    <title>WARBot - StarLight</title>
 
   </head>
   <body>
