--- a/warbot/war-nav.html
+++ b/warbot/war-nav.html
@@ -7,12 +7,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           サービス
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
-          <a class="dropdown-item" href="#">WARBot</a>
+          <a class="dropdown-item active" href="#">WARBot</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
@@ -32,7 +32,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">お知らせ</a>
+        <a class="nav-link" href="../notice/notice.html">お知らせ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">稼働状況</a>
