--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -18,26 +18,10 @@
 
   </head>
   <body>
-    <div id="nav-01">
-    </div>
-    <div class="card m-3">
-      <div class="card-header">
-        WARBotリリース情報
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">WARBot beta4.0をリリースしました。</h5>
-        <p class="card-text">今回のアップデートは、バグ修正の他に、コマンドの追加等を行いました。</p>
-        <a href="#" class="btn btn-primary">続きを読む</a>
-      </div>
-    </div>
-    <div class="card m-3">
-      <div class="card-header">
-        運営からのお知らせ
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">お知らせを統合しました！</h5>
-        <p class="card-text">今まではScrapBoxなどの外部サイトを利用していましたが、今回より自サイトを利用します。</p>
-        <a href="#" class="btn btn-primary">続きを読む</a>
+    <div class="container my-5">
+      <h3>工事中</h3>
+      <div class="progress my-5">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
       </div>
     </div>
   </body>
