--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -18,6 +18,8 @@
 
   </head>
   <body>
+    <div id="nav-01">
+    </div>
     <div class="container my-5">
       <h3>工事中</h3>
       <div class="progress my-5">
