--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
     <hr class="my-4">
     <h3>ツイートレット - Tweetlet</h3>
     <p>今見てるサイトをツイートできるNowBrowsing機能が欲しくて作りました。<br>NowBrowsingのところは変更可能です。</p>
-    <a class="btn btn-primary" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
+    <a class="btn btn-primary mb-5" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
+    <h3>WARBot</h3>
+    <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
+    <a class="btn btn-primary" href="./warbot/warbot.html" role="button">WARBot</a>
+    <a class="btn btn-primary" href="https://scrapbox.io/warbot/WARbot%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%83%AA%E3%82%B9%E3%83%88" role="button">コマンドリスト</a>
     </div>
     <div class="container my-5">
     <h2>個人運営のサイトです。</h2>
