--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
               <a class="dropdown-item" href="./warbot/warbot.html">WARBot</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item disabled" href="#">rand exam</a>
             </div>
           </li>
           <li class="nav-item">
@@ -44,9 +44,8 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">限界映像大会</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="https://genkaimusic.m86.work/">限界音楽村</a>
+              <a class="dropdown-item" href="https://portfolio.m86.work/">Portfolio</a>
             </div>
           </li>
           <li class="nav-item">
