--- a/warbot/war-nav.html
+++ b/warbot/war-nav.html
@@ -14,7 +14,7 @@
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
           <a class="dropdown-item active" href="#">WARBot</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item disabled" href="#">rand exam</a>
         </div>
       </li>
       <li class="nav-item">
@@ -26,9 +26,8 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">限界映像大会</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="https://genkaimusic.m86.work/">限界音楽村</a>
+          <a class="dropdown-item" href="https://portfolio.m86.work/">Portfolio</a>
         </div>
       </li>
       <li class="nav-item">
