--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -14,18 +14,36 @@
         $("#nav-01").load("war-nav.html");
       })
     </script>
+    <style>
+    .jumbotron {
+      background-image: url("warhead-bbk.png");
+      background-size: cover;
+      background-position: center 60%;
+    }
+    </style>>
     <title>WARBot - StarLight</title>
 
   </head>
   <body>
     <div id="nav-01">
     </div>
-    <div class="container my-5">
+  <div class="jumbotron jumbotron-fluid mt-4">
+    <div class="container">
+
+        <h1 class="display-4">WARBot</h1>
+        <p class="lead">バカだけど賢い、使えないけど使える。<br>WARbotは、ユーザーと共に成長し続ける、開発者でさえももはや意味が分からないbotです。</p>
+        <hr class="my-4">
+        <p>WARBotは、Discordの限界創作村サーバーから生まれたBotです。</p>
+        <a class="btn btn-primary btn-lg" href="https://discord.gg/cVQZaxp" role="button">限界創作村</a>
+      </div>
+      </div>
+      <div class="container mt-5">
       <h3>工事中</h3>
       <div class="progress my-5">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
       </div>
-    </div>
+      </div>
+
   </body>
 
 </html>
