--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
         <p class="lead">あなたの人生をちょっと幸せにしたい。そんな思いで運営しています。</p>
       </div><!-- /.container -->
     </div><!-- /.jumbotron -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-7860710257272145",
+              enable_page_level_ads: true
+         });
+    </script>
     <div class="container my-5">
     <h2>気が向いたら開発します。</h2>
     <hr class="my-4">
