--- a/notice/notice.html
+++ b/notice/notice.html
@@ -20,6 +20,13 @@
   <body>
     <div id="nav-01">
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-7860710257272145",
+              enable_page_level_ads: true
+         });
+    </script>
     <div class="card m-3">
       <div class="card-header">
         WARBotリリース情報
