--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -36,6 +36,13 @@
         <a class="btn btn-primary btn-lg" href="https://discord.gg/cVQZaxp" role="button">限界創作村</a>
       </div>
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-7860710257272145",
+              enable_page_level_ads: true
+         });
+    </script>
     <div class="container mt-5">
       <h3>工事中</h3>
       <div class="progress my-5">
