--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
       </div><!-- /.container -->
     </div><!-- /.jumbotron -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({
-              google_ad_client: "ca-pub-7860710257272145",
-              enable_page_level_ads: true
-         });
-    </script>
     <div class="container my-5">
     <h2>気が向いたら開発します。</h2>
     <hr class="my-4">
@@ -86,6 +80,17 @@
     <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
     <a class="btn btn-primary" href="https://www.m86.work/" role="button">ブログ</a>
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- devsites -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7860710257272145"
+         data-ad-slot="2222341411"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div class="container my-5">
     <h2>運営サービス一覧</h2>
     <hr class="my-4">
@@ -103,6 +108,17 @@
     <p>自分がプログラム等を学ぶため、そして他人に喜んでもらうため、日々運営を行っています。<br>だからお金は取りません。でもお気持ちで寄付を受け付けています。</p>
     <a class="btn btn-primary" href="#" role="button">寄付する</a>
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- devsites -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7860710257272145"
+         data-ad-slot="2222341411"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <footer class="page-footer font-small blue">
       <div class="footer-copyright text-center py-3">© 2019 Copyright
         <a href="https://twitter.com/minatoo86"> Minato86</a>
