--- a/notice/notice.html
+++ b/notice/notice.html
@@ -37,6 +37,17 @@
         <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- devsites -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7860710257272145"
+         data-ad-slot="2222341411"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <div class="card m-3">
       <div class="card-header">
         運営からのお知らせ
