--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -49,7 +49,17 @@
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
       </div>
     </div>
-
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- devsites -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7860710257272145"
+         data-ad-slot="2222341411"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </body>
 
 </html>
