--- a/notice/notice.html
+++ b/notice/notice.html
@@ -32,7 +32,7 @@
         WARBotリリース情報
       </div>
       <div class="card-body">
-        <h5 class="card-title">WARBot beta4.0をリリースしました。</h5>
+        <h5 class="card-title">WARBot beta4.0をリリースしました。<span class="badge badge-primary">β4.0</span></h5>
         <p class="card-text">今回のアップデートは、バグ修正の他に、コマンドの追加等を行いました。</p>
         <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
