--- a/index.html
+++ b/index.html
@@ -108,17 +108,19 @@
     <p>自分がプログラム等を学ぶため、そして他人に喜んでもらうため、日々運営を行っています。<br>だからお金は取りません。でもお気持ちで寄付を受け付けています。</p>
     <a class="btn btn-primary" href="#" role="button">寄付する</a>
     </div>
+    <dev class="container my-2">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7860710257272145"
-         data-ad-slot="2222341411"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+          style="display:block"
+          data-ad-client="ca-pub-7860710257272145"
+          data-ad-slot="2222341411"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    </dev>
     <footer class="page-footer font-small blue">
       <div class="footer-copyright text-center py-3">© 2019 Copyright
         <a href="https://twitter.com/minatoo86"> Minato86</a>
