--- a/notice/notice.html
+++ b/notice/notice.html
@@ -37,6 +37,7 @@
         <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
+    <dev class="container my-2">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
@@ -48,6 +49,7 @@
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    </dev>
     <div class="card m-3">
       <div class="card-header">
         運営からのお知らせ
