--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -36,13 +36,19 @@
         <a class="btn btn-primary btn-lg" href="https://discord.gg/cVQZaxp" role="button">限界創作村</a>
       </div>
     </div>
+    <dev class="container my-2">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- devsites -->
+    <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-7860710257272145"
+          data-ad-slot="2222341411"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
     <script>
-         (adsbygoogle = window.adsbygoogle || []).push({
-              google_ad_client: "ca-pub-7860710257272145",
-              enable_page_level_ads: true
-         });
+    (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    </dev>
     <div class="container mt-5">
       <h3>工事中</h3>
       <div class="progress my-5">
