site ad settings

--- a/notice/notice.html
+++ b/notice/notice.html
@@ -37,7 +37,7 @@
         <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
-    <dev class="container my-2">
+    <dev class="center-block">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
