--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <p>自分がプログラム等を学ぶため、そして他人に喜んでもらうため、日々運営を行っています。<br>だからお金は取りません。でもお気持ちで寄付を受け付けています。</p>
     <a class="btn btn-primary" href="#" role="button">寄付する</a>
     </div>
-    <dev class="container my-2">
+    <dev class="center-block">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
