--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <p>自分がプログラム等を学ぶため、そして他人に喜んでもらうため、日々運営を行っています。<br>だからお金は取りません。でもお気持ちで寄付を受け付けています。</p>
     <a class="btn btn-primary" href="#" role="button">寄付する</a>
     </div>
-    <dev class="center-block">
+    <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
@@ -120,7 +120,7 @@
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    </dev>
+    </center>
     <footer class="page-footer font-small blue">
       <div class="footer-copyright text-center py-3">© 2019 Copyright
         <a href="https://twitter.com/minatoo86"> Minato86</a>
