--- a/index.html
+++ b/index.html
@@ -80,17 +80,19 @@
     <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
     <a class="btn btn-primary" href="https://www.m86.work/" role="button">ブログ</a>
     </div>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- devsites -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7860710257272145"
-         data-ad-slot="2222341411"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <center>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- devsites -->
+      <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-7860710257272145"
+            data-ad-slot="2222341411"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      </center>
     <div class="container my-5">
     <h2>運営サービス一覧</h2>
     <hr class="my-4">
