--- a/notice/notice.html
+++ b/notice/notice.html
@@ -20,13 +20,6 @@
   <body>
     <div id="nav-01">
     </div>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({
-              google_ad_client: "ca-pub-7860710257272145",
-              enable_page_level_ads: true
-         });
-    </script>
     <div class="card m-3">
       <div class="card-header">
         WARBotリリース情報
@@ -37,19 +30,19 @@
         <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
-    <dev class="center-block">
+    <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7860710257272145"
-         data-ad-slot="2222341411"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+          style="display:block"
+          data-ad-client="ca-pub-7860710257272145"
+          data-ad-slot="2222341411"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    </dev>
+    </center>
     <div class="card m-3">
       <div class="card-header">
         運営からのお知らせ
