--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -36,7 +36,7 @@
         <a class="btn btn-primary btn-lg" href="https://discord.gg/cVQZaxp" role="button">限界創作村</a>
       </div>
     </div>
-    <dev class="container my-2">
+    <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
@@ -48,24 +48,26 @@
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    </dev>
+    </center>
     <div class="container mt-5">
       <h3>工事中</h3>
       <div class="progress my-5">
         <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">80%</div>
       </div>
     </div>
+    <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-7860710257272145"
-         data-ad-slot="2222341411"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
+          style="display:block"
+          data-ad-client="ca-pub-7860710257272145"
+          data-ad-slot="2222341411"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    </center>
   </body>
 
 </html>
