--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <title>StarLight</title>
-    <style type="text/css">
-
-    </style>
+    <script type="text/javascript">
+      $(function(){
+        $("#nav-01").load("https://dev.m86.work/footer/copyright.html");
+      })
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -123,11 +125,8 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     </center>
-    <footer class="page-footer font-small blue">
-      <div class="footer-copyright text-center py-3">© 2019 Copyright
-        <a href="https://twitter.com/minatoo86"> Minato86</a>
-      </div>
-    </footer>
   </body>
+  <div id="nav-01">
+    </div>
 
 </html>
