--- a/notice/notice.html
+++ b/notice/notice.html
@@ -13,6 +13,9 @@
       $(function(){
         $("#nav-01").load("notice-nav.html");
       })
+      $(function(){
+        $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+      })
     </script>
     <title>お知らせ - StarLight</title>
 
@@ -54,5 +57,6 @@
       </div>
     </div>
   </body>
-
+  <div id="footer-01">
+  </div>
 </html>
