--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -13,6 +13,9 @@
       $(function(){
         $("#nav-01").load("war-nav.html");
       })
+      $(function(){
+        $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+      })
     </script>
     <style>
     .jumbotron {
@@ -69,5 +72,6 @@
     </script>
     </center>
   </body>
-
+  <div id="footer-01">
+  </div>
 </html>
