--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>StarLight</title>
     <script type="text/javascript">
       $(function(){
-        $("#nav-01").load("https://dev.m86.work/footer/copyright.html");
+        $("#nav-01").load("./footer/copyright.html");
       })
     </script>
   </head>
@@ -127,6 +127,6 @@
     </center>
   </body>
   <div id="nav-01">
-    </div>
+  </div>
 
 </html>
