--- a/notice/notice.html
+++ b/notice/notice.html
@@ -30,7 +30,7 @@
       <div class="card-body">
         <h5 class="card-title">WARBot beta4.0をリリースしました。<span class="badge badge-primary">β4.0</span></h5>
         <p class="card-text">今回のアップデートは、バグ修正の他に、コマンドの追加等を行いました。</p>
-        <a href="#" class="btn btn-primary">続きを読む</a>
+        <a href="./post/1.html" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
     <center>
@@ -53,7 +53,6 @@
       <div class="card-body">
         <h5 class="card-title">お知らせを統合しました！</h5>
         <p class="card-text">今まではScrapBoxなどの外部サイトを利用していましたが、今回より自サイトを利用します。</p>
-        <a href="#" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
   </body>
