--- a/notice/notice.html
+++ b/notice/notice.html
@@ -17,6 +17,13 @@
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
       })
     </script>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://dev.m86.work/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://dev.m86.work/favicon/site.webmanifest">
+    <link rel="mask-icon" href="https://dev.m86.work/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>お知らせ - StarLight</title>
 
   </head>
