--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -24,6 +24,13 @@
       background-position: center 60%;
     }
     </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://dev.m86.work/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://dev.m86.work/favicon/site.webmanifest">
+    <link rel="mask-icon" href="https://dev.m86.work/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <title>WARBot - StarLight</title>
 
   </head>
