--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>StarLight</title>
+    <meta name="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="StarLight">
+    <meta itemprop="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+    <meta itemprop="image" content="">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://dev.m86.work">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="StarLight">
+    <meta property="og:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+    <meta property="og:image" content="">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="StarLight">
+    <meta name="twitter:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+    <meta name="twitter:image" content="">
 
   </head>
   <body>
