--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="StarLight">
     <meta itemprop="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
-    <meta itemprop="image" content="">
+    <meta itemprop="image" content="https://dev.m86.work/favicon/image.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://dev.m86.work">
     <meta property="og:type" content="website">
     <meta property="og:title" content="StarLight">
     <meta property="og:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://dev.m86.work/favicon/image.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="StarLight">
     <meta name="twitter:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
 
   </head>
   <body>
