--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <title>StarLight</title>
     <meta name="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@minatoo86" />
+
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="StarLight">
     <meta itemprop="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
