--- a/warbot/warbot.html
+++ b/warbot/warbot.html
@@ -31,6 +31,31 @@
     <link rel="mask-icon" href="https://dev.m86.work/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@minatoo86" />    
+
+    <!-- HTML Meta Tags -->
+    <title>WARBot - StarLight</title>
+    <meta name="description" content="WARBot公式サイトです。">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="WARBot - StarLight">
+    <meta itemprop="description" content="WARBot公式サイトです。">
+    <meta itemprop="image" content="https://dev.m86.work/favicon/image.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://dev.m86.work/warbot/warbot.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="WARBot - StarLight">
+    <meta property="og:description" content="WARBot公式サイトです。">
+    <meta property="og:image" content="https://dev.m86.work/favicon/image.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="WARBot - StarLight">
+    <meta name="twitter:description" content="WARBot公式サイトです。">
+    <meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
     <title>WARBot - StarLight</title>
 
   </head>
