--- a/notice/notice.html
+++ b/notice/notice.html
@@ -24,6 +24,29 @@
     <link rel="mask-icon" href="https://dev.m86.work/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- HTML Meta Tags -->
+    <title>お知らせ - StarLight</title>
+    <meta name="description" content="運営サイトに関するお知らせを掲載しています。">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="お知らせ - StarLight">
+    <meta itemprop="description" content="運営サイトに関するお知らせを掲載しています。">
+    <meta itemprop="image" content="https://dev.m86.work/favicon/image.png">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://dev.m86.work/notice/notice.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="お知らせ - StarLight">
+    <meta property="og:description" content="運営サイトに関するお知らせを掲載しています。">
+    <meta property="og:image" content="https://dev.m86.work/favicon/image.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="お知らせ - StarLight">
+    <meta name="twitter:description" content="運営サイトに関するお知らせを掲載しています。">
+    <meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
+
     <title>お知らせ - StarLight</title>
 
   </head>
