--- a/creatorsmc/creatormc-nav.html
+++ b/creatorsmc/creatormc-nav.html
@@ -1,5 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://dev.m86.work/">StarLight</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -8,6 +11,7 @@
           サービス
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item active" href="#">マイクラサーバー</a>
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
           <a class="dropdown-item" href="https://dev.m86.work/warbot/warbot.html">WARBot</a>
           <div class="dropdown-divider"></div>
@@ -15,7 +19,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="https://www.m86.work/">ブログ</a>
+        <a class="nav-link" href="https://www.m86.work/">ブログ</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
