--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               サービス
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="https://mc.m86.work/">マイクラサーバー</a>
               <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
               <a class="dropdown-item" href="./warbot/warbot.html">WARBot</a>
               <div class="dropdown-divider"></div>
