--- a/warbot/war-nav.html
+++ b/warbot/war-nav.html
@@ -11,6 +11,7 @@
           サービス
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="https://mc.m86.work/">マイクラサーバー</a>
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
           <a class="dropdown-item active" href="#">WARBot</a>
           <div class="dropdown-divider"></div>
