--- a/notice/notice.html
+++ b/notice/notice.html
@@ -55,6 +55,16 @@
     </div>
     <div class="card m-3">
       <div class="card-header">
+        新サイトリリース情報
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">マインクラフトサーバーのサイトをリリースしました。<span class="badge badge-primary">β4.0</span></h5>
+        <p class="card-text">CreatorsMinecraftServerというマイクラサーバーのサイトをリリースしました。一応サイト運営者もサーバーの運営やってます。もしよろしければ遊びに行ってみてください。</p>
+        <a href="https://mc.m86.work/" class="btn btn-primary">サイトに行く</a>
+      </div>
+    </div>
+    <div class="card m-3">
+      <div class="card-header">
         WARBotリリース情報
       </div>
       <div class="card-body">
