--- a/notice/notice.html
+++ b/notice/notice.html
@@ -58,7 +58,7 @@
         新サイトリリース情報
       </div>
       <div class="card-body">
-        <h5 class="card-title">マインクラフトサーバーのサイトをリリースしました。<span class="badge badge-primary">β4.0</span></h5>
+        <h5 class="card-title">マインクラフトサーバーのサイトをリリースしました。</h5>
         <p class="card-text">CreatorsMinecraftServerというマイクラサーバーのサイトをリリースしました。一応サイト運営者もサーバーの運営やってます。もしよろしければ遊びに行ってみてください。</p>
         <a href="https://mc.m86.work/" class="btn btn-primary">サイトに行く</a>
       </div>
