--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
     <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
     <a class="btn btn-primary" href="./warbot/warbot.html" role="button">WARBot</a>
     <a class="btn btn-primary" href="https://scrapbox.io/warbot/WARbot%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%83%AA%E3%82%B9%E3%83%88" role="button">コマンドリスト</a>
+    <h3>CreatorsMinecraftServer</h3>
+    <p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
+    <a class="btn btn-primary" href="https://mc.m86.work/" role="button">公式サイト</a>
     </div>
     <div class="container my-5">
     <h2>個人運営のサイトです。</h2>
