--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://mc.m86.work/">マイクラサーバー</a>
               <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
-              <a class="dropdown-item" href="./warbot/warbot.html">WARBot</a>
+              <a class="dropdown-item" href="https://warbot.m86.work/">WARBot</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item disabled" href="#">rand exam</a>
             </div>
@@ -133,7 +133,7 @@
     <a class="btn btn-primary mb-5" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
     <h3>WARBot</h3>
     <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
-    <a class="btn btn-primary" href="./warbot/warbot.html" role="button">WARBot</a>
+    <a class="btn btn-primary" href="https://warbot.m86.work/" role="button">WARBot</a>
     <a class="btn btn-primary" href="https://scrapbox.io/warbot/WARbot%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%83%AA%E3%82%B9%E3%83%88" role="button">コマンドリスト</a>
     <h3 class="mt-5">CreatorsMinecraftServer</h3>
     <p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
