--- a/notice/notice.html
+++ b/notice/notice.html
@@ -59,6 +59,7 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">マインクラフトサーバーのサイトをリリースしました。</h5>
+        <p><span class="badge badge-secondary">投稿 2019/02/27</span>
         <p class="card-text">CreatorsMinecraftServerというマイクラサーバーのサイトをリリースしました。一応サイト運営者もサーバーの運営やってます。もしよろしければ遊びに行ってみてください。</p>
         <a href="https://mc.m86.work/" class="btn btn-primary">サイトに行く</a>
       </div>
@@ -69,6 +70,7 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">WARBot beta4.0をリリースしました。<span class="badge badge-primary">β4.0</span></h5>
+        <p><span class="badge badge-secondary">投稿 2019/02/24</span>
         <p class="card-text">今回のアップデートは、バグ修正の他に、コマンドの追加等を行いました。</p>
         <a href="./post/1.html" class="btn btn-primary">続きを読む</a>
       </div>
