問い合わせ

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <div class="container my-5">
     <h2>個人運営のサイトです。</h2>
     <hr class="my-4">
-    <p>自分がプログラム等を学ぶため、そして他人に喜んでもらうため、日々運営を行っています。<br>だからお金は取りません。でもお気持ちで寄付を受け付けています。</p>
-    <a class="btn btn-primary" href="#" role="button">寄付する</a>
+    <p>少しでもあなたを幸せにできるように、願いを込めて運営を行っています。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
+    <a class="btn btn-primary" href="#" role="button">お問い合わせ</a>
     </div>
     <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
