--- a/notice/notice.html
+++ b/notice/notice.html
@@ -55,13 +55,24 @@
     </div>
     <div class="card m-3">
       <div class="card-header">
+        緊急メンテナンス
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">マイクラサーバーの緊急メンテナンスを行いました。</h5>
+        <p><span class="badge badge-secondary">投稿 2019/03/10</span>
+        <p class="card-text">マイクラサーバーの緊急メンテナンスを、2019/03/09 21:10～21:30まで行いました。<br>・CoreProtect系エラーの改善</p>
+        <a href="https://mc.m86.work/" class="btn btn-primary">サイトに行く</a>
+      </div>
+    </div>
+    <div class="card m-3">
+      <div class="card-header">
         バグ修正
       </div>
       <div class="card-body">
         <h5 class="card-title">限界大会の公式サイトのバグを修正しました。</h5>
         <p><span class="badge badge-secondary">投稿 2019/03/08</span>
         <p class="card-text">限界大会公式サイトのバグを修正しました。<br>・次回大会の日付が正常に表示されない問題<br>・一部端末で時間がずれる問題</p>
-        <a href="https://mc.m86.work/" class="btn btn-primary">サイトに行く</a>
+        <a href="https://genkai.m86.work/" class="btn btn-primary">サイトに行く</a>
       </div>
     </div>
     <div class="card m-3">
