--- a/notice/notice.html
+++ b/notice/notice.html
@@ -72,7 +72,7 @@
         <h5 class="card-title">限界大会の公式サイトのバグを修正しました。</h5>
         <p><span class="badge badge-secondary">投稿 2019/03/08</span>
         <p class="card-text">限界大会公式サイトのバグを修正しました。<br>・次回大会の日付が正常に表示されない問題<br>・一部端末で時間がずれる問題</p>
-        <a href="https://genkai.m86.work/" class="btn btn-primary">サイトに行く</a>
+        <a href="https://genkaicreate.m86.work/" class="btn btn-primary">サイトに行く</a>
       </div>
     </div>
     <div class="card m-3">
