--- a/notice/notice.html
+++ b/notice/notice.html
@@ -55,6 +55,17 @@
     </div>
     <div class="card m-3">
       <div class="card-header">
+        障害情報
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">マイクラサーバーがDoS攻撃に遭いました。</h5>
+        <p><span class="badge badge-secondary">投稿 2019/03/10</span>
+        <p class="card-text">クリエイターズマインクラフトサーバーがDos攻撃に遭いました。<br>対応は詳細を御覧ください。</p>
+        <a href="./post/2.html" class="btn btn-primary">続きを読む</a>
+      </div>
+    </div>
+    <div class="card m-3">
+      <div class="card-header">
         緊急メンテナンス
       </div>
       <div class="card-body">
