--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
         <p class="lead">あなたの人生をちょっと幸せにしたい。そんな思いで運営しています。</p>
       </div><!-- /.container -->
     </div><!-- /.jumbotron -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <div class="container my-5">
     <h2>気が向いたら開発します。</h2>
-    <hr class="my-4">
+    <hr class="mb-4">
     <p>映像やらプログラムやら、やりたいことが多すぎるので、気が向いたら開発します。<br>更新情報や最新情報はお知らせで確認できます。</p>
     <a class="btn btn-primary" href="./notice/notice.html" role="button">お知らせ</a>
     </div>
@@ -118,8 +117,8 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     </center>
-    <h2>運営サービス一覧</h2>
-    <hr class="my-4">
+    <h2 class="mt-3">運営サービス一覧</h2>
+    <hr class="mb-4">
     <h3>ツイートレット - Tweetlet</h3>
     <p>今見てるサイトをツイートできるNowBrowsing機能が欲しくて作りました。<br>NowBrowsingのところは変更可能です。</p>
     <a class="btn btn-primary mb-5" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
@@ -133,9 +132,9 @@
     </div>
     <div class="container my-5">
     <h2>個人運営のサイトです。</h2>
-    <hr class="my-4">
+    <hr class="mb-4">
     <p>少しでもあなたを幸せにできるように、願いを込めて運営を行っています。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
-    <a class="btn btn-primary" href="#" role="button">お問い合わせ</a>
+    <a class="btn btn-primary mb-3" href="#" role="button">お問い合わせ</a>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
