--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
     <div class="container my-5">
     <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
-    <a class="btn btn-primary" href="https://www.m86.work/" role="button">ブログ</a>
+    <a class="btn btn-primary mb-3" href="https://www.m86.work/" role="button">ブログ</a>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
