--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       </div><!-- /.container -->
     </div><!-- /.jumbotron -->
     <div class="container my-5">
-    <h2>気が向いたら開発します。</h2>
+    <h2>マイペースな開発</h2>
     <hr class="mb-4">
-    <p>映像やらプログラムやら、やりたいことが多すぎるので、気が向いたら開発します。<br>更新情報や最新情報はお知らせで確認できます。</p>
+    <p>開発速度は早くないかもしれません。気長にお待ち下さい。<br>更新情報や最新情報はお知らせで確認できます。</p>
     <a class="btn btn-primary" href="./notice/notice.html" role="button">お知らせ</a>
     </div>
     <div class="container my-5">
@@ -131,9 +131,9 @@
     <a class="btn btn-primary" href="https://mc.m86.work/" role="button">公式サイト</a>
     </div>
     <div class="container my-5">
-    <h2>個人運営のサイトです。</h2>
+    <h2>お問い合わせ</h2>
     <hr class="mb-4">
-    <p>少しでもあなたを幸せにできるように、願いを込めて運営を行っています。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
+    <p>個人運営のサイトなので、サポートには限度があります。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
     <a class="btn btn-primary mb-3" href="#" role="button">お問い合わせ</a>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
