--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <h2>お問い合わせ</h2>
     <hr class="mb-4">
     <p>個人運営のサイトなので、サポートには限度があります。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
-    <a class="btn btn-primary mb-3" href="#" role="button">お問い合わせ</a>
+    <a class="btn btn-primary mb-3" href="https://warbot.m86.work/contact/" role="button">お問い合わせ</a>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
