--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h3>WARBot</h3>
     <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
     <a class="btn btn-primary" href="https://warbot.m86.work/" role="button">WARBot</a>
-    <a class="btn btn-primary" href="https://scrapbox.io/warbot/WARbot%E3%82%B3%E3%83%9E%E3%83%B3%E3%83%89%E3%83%AA%E3%82%B9%E3%83%88" role="button">コマンドリスト</a>
+    <a class="btn btn-primary" href="https://warbot.m86.work/commandlist.html" role="button">コマンドリスト</a>
     <h3 class="mt-5">CreatorsMinecraftServer</h3>
     <p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
     <a class="btn btn-primary" href="https://mc.m86.work/" role="button">公式サイト</a>
