--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
               <a class="dropdown-item" href="https://warbot.m86.work/">WARBot</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item disabled" href="#">rand exam</a>
+          <a class="dropdown-item disabled" href="#">ソフトウェア</a>
             </div>
           </li>
           <li class="nav-item">
