--- a/notice/notice.html
+++ b/notice/notice.html
@@ -55,6 +55,17 @@
     </div>
     <div class="card m-3">
       <div class="card-header">
+        限界大会
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">限界デザイン大会 x クリエイターズ夏休み</h5>
+        <p><span class="badge badge-secondary">投稿 2019/03/20</span>
+        <p class="card-text">限界デザイン大会とクリエイターズ夏休みのコラボイベントを開催します。<br>詳細はリンク先を御覧ください。</p>
+        <a href="./post/3.html" class="btn btn-primary">続きを読む</a>
+      </div>
+    </div>
+    <div class="card m-3">
+      <div class="card-header">
         障害情報
       </div>
       <div class="card-body">
