--- a/notice/notice-nav.html
+++ b/notice/notice-nav.html
@@ -11,10 +11,10 @@
           サービス
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://genkaicreate.m86.work">限界大会</a>
-          <a class="dropdown-item" href="https://mc.m86.work/">マイクラサーバー</a>
+          <a class="dropdown-item" href="https://apps.m86.work/genkai/">限界大会</a>
+          <a class="dropdown-item" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
           <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
-          <a class="dropdown-item" href="https://warbot.m86.work/">WARBot</a>
+          <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item disabled" href="#">ソフトウェア</a>
         </div>
@@ -36,7 +36,7 @@
         <a class="nav-link active" href="#">お知らせ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://warbot.m86.work/contact/">お問い合わせ</a>
+        <a class="nav-link" href="https://apps.m86.work/contact/">お問い合わせ</a>
       </li>
     </ul>
   </div>
