--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
     <a class="btn btn-primary mb-5" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
     <h3>WARBot</h3>
     <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
-    <a class="btn btn-primary" href="https://warbot.m86.work/" role="button">WARBot</a>
-    <a class="btn btn-primary" href="https://warbot.m86.work/commandlist.html" role="button">コマンドリスト</a>
+    <a class="btn btn-primary" href="https://apps.m86.work/warbot/" role="button">WARBot</a>
+    <a class="btn btn-primary" href="https://apps.m86.work/warbot/commandlist.html" role="button">コマンドリスト</a>
     <h3 class="mt-5">CreatorsMinecraftServer</h3>
     <p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
-    <a class="btn btn-primary" href="https://mc.m86.work/" role="button">公式サイト</a>
+    <a class="btn btn-primary" href="https://apps.m86.work/creatorsmc/" role="button">公式サイト</a>
     </div>
     <div class="container my-5">
     <h2>お問い合わせ</h2>
     <hr class="mb-4">
     <p>個人運営のサイトなので、サポートには限度があります。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
-    <a class="btn btn-primary mb-3" href="https://warbot.m86.work/contact/" role="button">お問い合わせ</a>
+    <a class="btn btn-primary mb-3" href="https://apps.m86.work/contact/" role="button">お問い合わせ</a>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
