--- a/notice/notice.html
+++ b/notice/notice.html
@@ -86,6 +86,19 @@
         <a href="https://mc.m86.work/" class="btn btn-primary">サイトに行く</a>
       </div>
     </div>
+    <center>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- devsites -->
+    <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-7860710257272145"
+          data-ad-slot="2222341411"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </center>
     <div class="card m-3">
       <div class="card-header">
         バグ修正
