--- a/notice/notice.html
+++ b/notice/notice.html
@@ -55,6 +55,17 @@
     </div>
     <div class="card m-3">
       <div class="card-header">
+        バグ情報
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">WARBot既知のバグ＆修正予定一覧</h5>
+        <p><span class="badge badge-secondary">投稿 2019/04/06</span>
+        <p class="card-text">WARBot既知のバグ＆修正予定一覧</p>
+        <a href="./post/4.html" class="btn btn-primary">続きを読む</a>
+      </div>
+    </div>
+    <div class="card m-3">
+      <div class="card-header">
         限界大会
       </div>
       <div class="card-body">
