--- a/creatorsmc/creatormc-nav.html
+++ b/creatorsmc/creatormc-nav.html
@@ -13,14 +13,14 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://apps.m86.work/genkai/">限界大会</a>
           <a class="dropdown-item active" href="#">マイクラサーバー</a>
-          <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
+          <a class="dropdown-item" href="https://minato86.hatenablog.com/p/tweetlet.html">ツイートレット</a>
           <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item disabled" href="#">ソフトウェア</a>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.m86.work/">ブログ</a>
+        <a class="nav-link" href="https://minato86.hatenablog.com/">ブログ</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
