--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://apps.m86.work/genkai/">限界大会</a>
               <a class="dropdown-item" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
-              <a class="dropdown-item" href="https://www.m86.work/p/tweetlet.html">ツイートレット</a>
+              <a class="dropdown-item" href="https://minato86.hatenablog.com/p/tweetlet.html">ツイートレット</a>
               <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
               <div class="dropdown-divider"></div>
           <a class="dropdown-item disabled" href="#">ソフトウェア</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.m86.work/">ブログ</a>
+            <a class="nav-link" href="https://minato86.hatenablog.com/">ブログ</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -104,7 +104,7 @@
     </div>
     <div class="container my-5">
     <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
-    <a class="btn btn-primary mb-3" href="https://www.m86.work/" role="button">ブログ</a>
+    <a class="btn btn-primary mb-3" href="https://minato86.hatenablog.com/" role="button">ブログ</a>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
@@ -121,7 +121,7 @@
     <hr class="mb-4">
     <h3>ツイートレット - Tweetlet</h3>
     <p>今見てるサイトをツイートできるNowBrowsing機能が欲しくて作りました。<br>NowBrowsingのところは変更可能です。</p>
-    <a class="btn btn-primary mb-5" href="https://www.m86.work/p/tweetlet.html" role="button">ツイートレット</a>
+    <a class="btn btn-primary mb-5" href="https://minato86.hatenablog.com/p/tweetlet.html" role="button">ツイートレット</a>
     <h3>WARBot</h3>
     <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
     <a class="btn btn-primary" href="https://apps.m86.work/warbot/" role="button">WARBot</a>
