--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a class="dropdown-item" href="https://minato86.hatenablog.com/p/tweetlet.html">ツイートレット</a>
               <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
               <div class="dropdown-divider"></div>
-          <a class="dropdown-item disabled" href="#">ソフトウェア</a>
+          <a class="dropdown-item" href="#">その他</a>
             </div>
           </li>
           <li class="nav-item">
