--- a/donate/index.html
+++ b/donate/index.html
@@ -58,7 +58,7 @@
         <h5>等サイトは、運営Minato86によって、無償で提供されています。</h5>
         <h5 class="mt-4">その他私が運営しているサービスに関しても、全て無償で提供しています。</h5>
         <h5>この運営を、少しでも寄付をしたいと思ったら、ぜひ寄付をお願い致します。</h5>
-        <h5>サービスの安定した提供という形でお返しさせていただきます。</h5>
+        <h5 class="mb-5">サービスの安定した提供という形でお返しさせていただきます。</h5>
         <center>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- devsites -->
