--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <div class="container my-5">
     <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
     <a class="btn btn-primary mb-3" href="https://minato86.hatenablog.com/" role="button">ブログ</a>
+    <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
@@ -135,6 +136,7 @@
     <hr class="mb-4">
     <p>個人運営のサイトなので、サポートには限度があります。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
     <a class="btn btn-primary mb-3" href="https://apps.m86.work/contact/" role="button">お問い合わせ</a>
+    <center>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- devsites -->
     <ins class="adsbygoogle"
@@ -147,6 +149,7 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
     </center>
+    <a href="./donate/" class="mt-5">StarLightに寄付をする</a>
     </div>
   </body>
   <div id="nav-01">
