--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://apps.m86.work/genkai/">限界大会</a>
               <a class="dropdown-item" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
-              <a class="dropdown-item" href="https://minato86.hatenablog.com/p/tweetlet.html">ツイートレット</a>
+              <a class="dropdown-item" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
               <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
               <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">その他</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://minato86.hatenablog.com/">ブログ</a>
+            <a class="nav-link" href="https://m86.work/">ブログ</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -120,9 +120,9 @@
     </center>
     <h2 class="mt-5">運営サービス一覧</h2>
     <hr class="mb-4">
-    <h3>ツイートレット - Tweetlet</h3>
-    <p>今見てるサイトをツイートできるNowBrowsing機能が欲しくて作りました。<br>NowBrowsingのところは変更可能です。</p>
-    <a class="btn btn-primary mb-5" href="https://minato86.hatenablog.com/p/tweetlet.html" role="button">ツイートレット</a>
+    <h3>MagicalConverter</h3>
+    <p>音楽データさえあれば、すぐに音楽を動画にできます。<br>自分の好みの画像や文字を入れることもできる、魔法の変換サービスです。</p>
+    <a class="btn btn-primary mb-5" href="https://apps.m86.work/magicalcv/" role="button">MagicalConverter</a>
     <h3>WARBot</h3>
     <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
     <a class="btn btn-primary" href="https://apps.m86.work/warbot/" role="button">WARBot</a>
