--- a/notice/notice2.html
+++ b/notice/notice2.html
@@ -53,6 +53,7 @@
   <body>
     <div id="nav-01">
     </div>
+    <p class="ml-3"><a href="./notice.html"><i class="fas fa-chevron-left"></i> 新しいお知らせを見る</a></p>
     <div class="card m-3">
       <div class="card-header">
         バグ情報
