お知らせページの更新

--- a/notice/notice.html
+++ b/notice/notice.html
@@ -60,9 +60,9 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">WARBotの更新ログの変更について</h5>
-        <p><span class="badge badge-secondary">投稿 2019/05/14</span>
+        <p><span class="badge badge-secondary">投稿 2019/05/14</span><span class="badge badge-secondary">更新 2019/06/05</span>
         <p class="card-text">WARBotの更新ログを、以下のページに統一します。</p>
-        <a href="./post/4.html" class="btn btn-primary">更新ログ</a>
+        <a href="https://gist.github.com/Chipsnet/e86583934ca7ef74b2134dfc4b0db14b" class="btn btn-primary">更新ログ</a>
       </div>
     </div>
     <center>
