Class追加スクリプト

--- a/donate/index.html
+++ b/donate/index.html
@@ -15,6 +15,7 @@
       })
       $(function(){
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+        $('#donate_nav').addClass('active');
       })
     </script>
     <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
