実行タイミングの変更

--- a/donate/index.html
+++ b/donate/index.html
@@ -15,8 +15,11 @@
       })
       $(function(){
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
-        $('#donate_nav').addClass('active');
+        
       })
+      $(window).load(function () {
+        $('#donate_nav').addClass('active');
+      });
     </script>
     <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
