jquery3.0用にコードを変更

--- a/donate/index.html
+++ b/donate/index.html
@@ -17,7 +17,7 @@
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
         
       })
-      $(window).load(function () {
+      $(window).on('load',function(){
         $('#donate_nav').addClass('active');
       });
     </script>
