--- a/donate/index.html
+++ b/donate/index.html
@@ -11,12 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $(function(){
-        $("#nav-01").load("donate-nav.html");
-      })
-      $(function(){
+        $("#nav-01").load("https://dev.m86.work/nav/navigation.html");
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
-        
-      })
+      });
       $(window).on('load',function(){
         $('#donate_nav').addClass('active');
       });
