ナビゲーションバーのid追加

--- a/donate/index.html
+++ b/donate/index.html
@@ -15,7 +15,7 @@
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
       });
       $(window).on('load',function(){
-        $('#donate_nav').addClass('active');
+        $('#service').addClass('active');
       });
     </script>
     <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
